--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.scholastic.intl.slz2</groupId>
 	<artifactId>slz-core</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.2.0</version>
 	<packaging>war</packaging>
 	<name>slz-core</name>
 
